--- a/Prototype.ipynb
+++ b/Prototype.ipynb
@@ -87,6 +87,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import argparse"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
